k8s/manifests/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: hackathon
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
