k8s/manifests/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: hackathon
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
